--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,4 @@
 @page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Will the air kill me?</h1>
+<AirStatus></AirStatus>
